Tunable model now supports data reuse
Tunable model can reuse the data it has already loaded. It can reload the data per user request or when data parameters change

--- a/tunable_model/TunableModel_Test.ipynb
+++ b/tunable_model/TunableModel_Test.ipynb
@@ -67,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def keras_test_model_regression(input_shape, output_size=1):\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -240,75 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for dataset 1 with window_size of 30, stride of 1 and maxRUL of 125. Cros-Validation ratio 0\n",
-      "Loading data from file and computing dataframes\n",
-      "Printing shapes\n",
-      "\n",
-      "Training data (X, y)\n",
-      "(17731, 420)\n",
-      "(17731, 1)\n",
-      "Testing data (X, y)\n",
-      "(100, 420)\n",
-      "(100, 1)\n",
-      "Printing first 5 elements\n",
-      "\n",
-      "Training data (X, y)\n",
-      "[[0.20962199 0.47723785 0.36008634 ... 0.09090909 0.71653543 0.73398665]\n",
-      " [0.32302405 0.5314578  0.40992936 ... 0.27272727 0.62992126 0.62647351]\n",
-      " [0.39175258 0.43350384 0.43072998 ... 0.27272727 0.69291339 0.86024712]\n",
-      " [0.39175258 0.30051151 0.38500785 ... 0.27272727 0.54330709 0.64820338]\n",
-      " [0.39862543 0.30204604 0.47036892 ... 0.27272727 0.52755906 0.58940491]]\n",
-      "[[125.]\n",
-      " [125.]\n",
-      " [125.]\n",
-      " [125.]\n",
-      " [125.]]\n",
-      "Testing data (X, y)\n",
-      "[[0.17182131 0.44526854 0.25843799 ... 0.36363636 0.52755906 0.65473654]\n",
-      " [0.51890034 0.46317136 0.36185243 ... 0.18181818 0.52755906 0.52208493]\n",
-      " [0.56701031 0.45677749 0.519427   ... 0.54545455 0.62204724 0.53941202]\n",
-      " [0.42611684 0.58414322 0.50215856 ... 0.54545455 0.34645669 0.51683   ]\n",
-      " [0.47079038 0.62327366 0.52158556 ... 0.45454545 0.48031496 0.73498083]]\n",
-      "[[112.]\n",
-      " [ 98.]\n",
-      " [ 69.]\n",
-      " [ 82.]\n",
-      " [ 91.]]\n",
-      "training without cv\n",
-      "Epoch 1/10\n",
-      "17731/17731 [==============================] - 0s 20us/step - loss: 6887.3147 - mean_squared_error: 6879.8173\n",
-      "Epoch 2/10\n",
-      "17731/17731 [==============================] - 0s 8us/step - loss: 4645.8146 - mean_squared_error: 4638.0527\n",
-      "Epoch 3/10\n",
-      "17731/17731 [==============================] - 0s 7us/step - loss: 3128.9660 - mean_squared_error: 3119.6493\n",
-      "Epoch 4/10\n",
-      "17731/17731 [==============================] - 0s 7us/step - loss: 2392.0146 - mean_squared_error: 2380.9912\n",
-      "Epoch 5/10\n",
-      "17731/17731 [==============================] - 0s 8us/step - loss: 2090.0108 - mean_squared_error: 2077.3360\n",
-      "Epoch 6/10\n",
-      "17731/17731 [==============================] - 0s 7us/step - loss: 1890.6461 - mean_squared_error: 1875.8104\n",
-      "Epoch 7/10\n",
-      "17731/17731 [==============================] - 0s 6us/step - loss: 1701.8041 - mean_squared_error: 1684.2960\n",
-      "Epoch 8/10\n",
-      "17731/17731 [==============================] - 0s 7us/step - loss: 1502.4333 - mean_squared_error: 1481.4337\n",
-      "Epoch 9/10\n",
-      "17731/17731 [==============================] - 0s 7us/step - loss: 1248.8231 - mean_squared_error: 1221.8904\n",
-      "Epoch 10/10\n",
-      "17731/17731 [==============================] - 0s 6us/step - loss: 993.1907 - mean_squared_error: 957.5003\n",
-      "100/100 [==============================] - 0s 325us/step\n",
-      "\n",
-      "Test Scores\n",
-      "{'loss': 929.1197338867188, 'score_1': 888.7988916015624, 'rhs': array([20.88001865]), 'rmse': 29.868377927165714}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_features = len(selected_features)\n",
     "shape = len(selected_features)*window_size\n",
@@ -320,9 +256,96 @@
     "tModel = SequenceTunableModelRegression('ModelRUL_Keras', model, lib_type='keras', data_handler=dHandler_cmaps)\n",
     "\n",
     "tModel.data_handler.data_scaler = None\n",
-    "tModel.data_scaler = min_max_scaler\n",
-    "\n",
-    "tModel.load_data(unroll=True, verbose=1, cross_validation_ratio=0)\n",
+    "tModel.data_scaler = min_max_scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using previously loaded data\n",
+      "Printing shapes\n",
+      "\n",
+      "Training data (X, y)\n",
+      "(14400, 420)\n",
+      "(14400, 1)\n",
+      "Cross-Validation data (X, y)\n",
+      "(20, 420)\n",
+      "(20, 1)\n",
+      "Testing data (X, y)\n",
+      "(100, 420)\n",
+      "(100, 1)\n",
+      "Printing first 5 elements\n",
+      "\n",
+      "Training data (X, y)\n",
+      "[[0.22299652 0.33979294 0.1771978  ... 0.2        0.82051282 0.71623349]\n",
+      " [0.19860627 0.42500664 0.21350078 ... 0.2        0.88034188 0.74023576]\n",
+      " [0.10452962 0.45872047 0.32790424 ... 0.1        0.70940171 0.71921602]\n",
+      " [0.14982578 0.3480223  0.27138932 ... 0.3        0.74358974 0.78000284]\n",
+      " [0.16724739 0.21210512 0.39776295 ... 0.1        0.62393162 0.7994603 ]]\n",
+      "[[125.]\n",
+      " [125.]\n",
+      " [125.]\n",
+      " [125.]\n",
+      " [125.]]\n",
+      "Cross-Validation data (X, y)\n",
+      "[[0.49477352 0.73161667 0.75706436 ... 0.8        0.17094017 0.38488851]\n",
+      " [0.45644599 0.54977436 0.57339089 ... 0.3        0.54700855 0.36940775]\n",
+      " [0.51567944 0.54473055 0.66365777 ... 0.8        0.31623932 0.34995029]\n",
+      " [0.31010453 0.54207592 0.44525118 ... 0.4        0.70940171 0.75770487]\n",
+      " [0.41114983 0.55428723 0.43524333 ... 0.3        0.8034188  0.52648771]]\n",
+      "[[ 11.]\n",
+      " [ 94.]\n",
+      " [ 10.]\n",
+      " [138.]\n",
+      " [121.]]\n",
+      "Testing data (X, y)\n",
+      "[[0.16027875 0.46217149 0.25843799 ... 0.4        0.57264957 0.65473654]\n",
+      " [0.51219512 0.48075392 0.36185243 ... 0.2        0.57264957 0.52208493]\n",
+      " [0.56097561 0.47411733 0.519427   ... 0.6        0.67521368 0.53941202]\n",
+      " [0.41811847 0.60631802 0.50215856 ... 0.6        0.37606838 0.51683   ]\n",
+      " [0.46341463 0.6469339  0.52158556 ... 0.5        0.52136752 0.73498083]]\n",
+      "[[112.]\n",
+      " [ 98.]\n",
+      " [ 69.]\n",
+      " [ 82.]\n",
+      " [ 91.]]\n",
+      "training with cv\n",
+      "Train on 14400 samples, validate on 20 samples\n",
+      "Epoch 1/10\n",
+      "14400/14400 [==============================] - 0s 10us/step - loss: 353.5572 - mean_squared_error: 295.9658 - val_loss: 537.0276 - val_mean_squared_error: 479.4394\n",
+      "Epoch 2/10\n",
+      "14400/14400 [==============================] - 0s 10us/step - loss: 352.5388 - mean_squared_error: 294.9856 - val_loss: 614.7391 - val_mean_squared_error: 557.1206\n",
+      "Epoch 3/10\n",
+      "14400/14400 [==============================] - 0s 12us/step - loss: 353.2340 - mean_squared_error: 295.7156 - val_loss: 498.1114 - val_mean_squared_error: 440.6219\n",
+      "Epoch 4/10\n",
+      "14400/14400 [==============================] - 0s 8us/step - loss: 351.6116 - mean_squared_error: 294.1526 - val_loss: 650.5151 - val_mean_squared_error: 592.9466\n",
+      "Epoch 5/10\n",
+      "14400/14400 [==============================] - 0s 11us/step - loss: 352.8336 - mean_squared_error: 295.4076 - val_loss: 548.0105 - val_mean_squared_error: 490.5583\n",
+      "Epoch 6/10\n",
+      "14400/14400 [==============================] - 0s 7us/step - loss: 350.7629 - mean_squared_error: 293.3584 - val_loss: 510.6809 - val_mean_squared_error: 453.3577\n",
+      "Epoch 7/10\n",
+      "14400/14400 [==============================] - 0s 7us/step - loss: 350.0384 - mean_squared_error: 292.7258 - val_loss: 559.2936 - val_mean_squared_error: 502.0268\n",
+      "Epoch 8/10\n",
+      "14400/14400 [==============================] - 0s 9us/step - loss: 350.3905 - mean_squared_error: 293.1697 - val_loss: 524.3652 - val_mean_squared_error: 467.1535\n",
+      "Epoch 9/10\n",
+      "14400/14400 [==============================] - 0s 8us/step - loss: 349.3542 - mean_squared_error: 292.2102 - val_loss: 502.4012 - val_mean_squared_error: 445.2840\n",
+      "Epoch 10/10\n",
+      "14400/14400 [==============================] - 0s 9us/step - loss: 349.0133 - mean_squared_error: 291.8943 - val_loss: 516.6741 - val_mean_squared_error: 459.6048\n",
+      "100/100 [==============================] - 0s 72us/step\n",
+      "\n",
+      "Test Scores\n",
+      "{'loss': 348.87940673828126, 'score_1': 291.81016723632814, 'rhs': array([4.66285161]), 'rmse': 17.04024647709064}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tModel.load_data(unroll=True, verbose=1, cross_validation_ratio=0.2, reload_data=False)\n",
     "tModel.print_data()\n",
     "\n",
     "#Train the model\n",
@@ -342,64 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for dataset 1 with window_size of 30, stride of 1 and maxRUL of 125. Cros-Validation ratio 0\n",
-      "Loading data from file and computing dataframes\n",
-      "Printing shapes\n",
-      "\n",
-      "Training data (X, y)\n",
-      "(17731, 420)\n",
-      "(17731, 1)\n",
-      "Testing data (X, y)\n",
-      "(100, 420)\n",
-      "(100, 1)\n",
-      "Printing first 5 elements\n",
-      "\n",
-      "Training data (X, y)\n",
-      "[[0.20962199 0.47723785 0.36008634 ... 0.09090909 0.71653543 0.73398665]\n",
-      " [0.32302405 0.5314578  0.40992936 ... 0.27272727 0.62992126 0.62647351]\n",
-      " [0.39175258 0.43350384 0.43072998 ... 0.27272727 0.69291339 0.86024712]\n",
-      " [0.39175258 0.30051151 0.38500785 ... 0.27272727 0.54330709 0.64820338]\n",
-      " [0.39862543 0.30204604 0.47036892 ... 0.27272727 0.52755906 0.58940491]]\n",
-      "[[125.]\n",
-      " [125.]\n",
-      " [125.]\n",
-      " [125.]\n",
-      " [125.]]\n",
-      "Testing data (X, y)\n",
-      "[[0.17182131 0.44526854 0.25843799 ... 0.36363636 0.52755906 0.65473654]\n",
-      " [0.51890034 0.46317136 0.36185243 ... 0.18181818 0.52755906 0.52208493]\n",
-      " [0.56701031 0.45677749 0.519427   ... 0.54545455 0.62204724 0.53941202]\n",
-      " [0.42611684 0.58414322 0.50215856 ... 0.54545455 0.34645669 0.51683   ]\n",
-      " [0.47079038 0.62327366 0.52158556 ... 0.45454545 0.48031496 0.73498083]]\n",
-      "[[112.]\n",
-      " [ 98.]\n",
-      " [ 69.]\n",
-      " [ 82.]\n",
-      " [ 91.]]\n",
-      "Epoch: 0001 cost_reg= 7709.101422991 cost= 7705.426422991\n",
-      "Epoch: 0002 cost_reg= 6407.890443638 cost= 6404.246986607\n",
-      "Epoch: 0003 cost_reg= 4962.375725446 cost= 4957.883886719\n",
-      "Epoch: 0004 cost_reg= 3707.519168527 cost= 3701.671463449\n",
-      "Epoch: 0005 cost_reg= 2840.497984096 cost= 2833.167068917\n",
-      "Epoch: 0006 cost_reg= 2354.648883929 cost= 2346.012611607\n",
-      "Epoch: 0007 cost_reg= 2067.816476004 cost= 2058.143240792\n",
-      "Epoch: 0008 cost_reg= 1819.560445731 cost= 1808.765359933\n",
-      "Epoch: 0009 cost_reg= 1571.597589983 cost= 1559.426803153\n",
-      "Epoch: 0010 cost_reg= 1332.640837751 cost= 1318.776708984\n",
-      "Epoch:Final cost_reg= 1332.640837751 cost= 1318.776708984\n",
-      "\n",
-      "Test Scores\n",
-      "{'rhs': array([33.79761897]), 'rmse': 34.4127883206229}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_features = len(selected_features)\n",
     "shape = len(selected_features)*window_size\n",
@@ -442,14 +410,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = 784\n",
+    "\n",
+    "#Get keras model\n",
+    "model = get_keras_compiled_model(input_dim, \"classification\", output_size=10)\n",
+    "\n",
+    "\n",
+    "tModel = SequenceTunableModelClassification('ModelMNIST_Keras', model, lib_type='keras', data_handler=dHandler_mnist)\n",
+    "\n",
+    "#tModel.data_handler.data_scaler = None\n",
+    "#tModel.data_scaler = min_max_scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data. Cross-Validation ratio 0\n",
+      "Using previously loaded data\n",
       "Printing shapes\n",
       "\n",
       "Training data (X, y)\n",
@@ -484,45 +470,34 @@
       " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]]\n",
       "training without cv\n",
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 1s 15us/step - loss: 0.6547 - acc: 0.8382\n",
+      "60000/60000 [==============================] - 1s 14us/step - loss: 0.1075 - acc: 0.9702\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 1s 15us/step - loss: 0.3073 - acc: 0.9151\n",
+      "60000/60000 [==============================] - 1s 14us/step - loss: 0.0990 - acc: 0.9731\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 1s 13us/step - loss: 0.2507 - acc: 0.9298\n",
+      "60000/60000 [==============================] - 1s 16us/step - loss: 0.0920 - acc: 0.9751\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 1s 12us/step - loss: 0.2151 - acc: 0.9399\n",
+      "60000/60000 [==============================] - 1s 16us/step - loss: 0.0850 - acc: 0.9772\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 1s 13us/step - loss: 0.1885 - acc: 0.9470\n",
+      "60000/60000 [==============================] - 1s 16us/step - loss: 0.0788 - acc: 0.9791\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 1s 13us/step - loss: 0.1678 - acc: 0.9526\n",
+      "60000/60000 [==============================] - 1s 21us/step - loss: 0.0732 - acc: 0.9808\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 1s 21us/step - loss: 0.1511 - acc: 0.9577\n",
+      "60000/60000 [==============================] - 1s 16us/step - loss: 0.0682 - acc: 0.9822\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 1s 24us/step - loss: 0.1369 - acc: 0.9620\n",
+      "60000/60000 [==============================] - 1s 18us/step - loss: 0.0635 - acc: 0.9836: 1s - loss: 0.0\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 1s 19us/step - loss: 0.1253 - acc: 0.9652\n",
+      "60000/60000 [==============================] - 1s 15us/step - loss: 0.0592 - acc: 0.9850\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 1s 15us/step - loss: 0.1148 - acc: 0.9679\n",
-      "10000/10000 [==============================] - 0s 34us/step\n",
+      "60000/60000 [==============================] - 1s 14us/step - loss: 0.0555 - acc: 0.9861\n",
+      "10000/10000 [==============================] - 0s 28us/step\n",
       "\n",
       "Test Scores\n",
-      "{'loss': 0.1295162530094385, 'score_1': 0.9619}\n"
+      "{'loss': 0.09461064505837857, 'score_1': 0.9706}\n"
      ]
     }
    ],
    "source": [
-    "input_dim = 784\n",
-    "\n",
-    "#Get keras model\n",
-    "model = get_keras_compiled_model(input_dim, \"classification\", output_size=10)\n",
-    "\n",
-    "\n",
-    "tModel = SequenceTunableModelClassification('ModelMNIST_Keras', model, lib_type='keras', data_handler=dHandler_mnist)\n",
-    "\n",
-    "#tModel.data_handler.data_scaler = None\n",
-    "#tModel.data_scaler = min_max_scaler\n",
-    "\n",
-    "tModel.load_data(unroll=True, verbose=1, cross_validation_ratio=0)\n",
+    "tModel.load_data(unroll=True, verbose=1, cross_validation_ratio=0, reload_data=False)\n",
     "tModel.print_data()\n",
     "\n",
     "#Train the model\n",
@@ -534,64 +509,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data. Cross-Validation ratio 0\n",
-      "Printing shapes\n",
-      "\n",
-      "Training data (X, y)\n",
-      "(60000, 784)\n",
-      "(60000, 10)\n",
-      "Testing data (X, y)\n",
-      "(10000, 784)\n",
-      "(10000, 10)\n",
-      "Printing first 5 elements\n",
-      "\n",
-      "Training data (X, y)\n",
-      "[[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "[[0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n",
-      "Testing data (X, y)\n",
-      "[[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "[[0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]]\n",
-      "Epoch: 0001 cost_reg= 0.661378913 cost= 0.661378913\n",
-      "Epoch: 0002 cost_reg= 0.307982119 cost= 0.307982119\n",
-      "Epoch: 0003 cost_reg= 0.249859576 cost= 0.249859576\n",
-      "Epoch: 0004 cost_reg= 0.214853489 cost= 0.214853489\n",
-      "Epoch: 0005 cost_reg= 0.188589578 cost= 0.188589578\n",
-      "Epoch: 0006 cost_reg= 0.166828428 cost= 0.166828428\n",
-      "Epoch: 0007 cost_reg= 0.150683058 cost= 0.150683058\n",
-      "Epoch: 0008 cost_reg= 0.136732382 cost= 0.136732382\n",
-      "Epoch: 0009 cost_reg= 0.124393019 cost= 0.124393019\n",
-      "Epoch: 0010 cost_reg= 0.114521179 cost= 0.114521179\n",
-      "Epoch:Final cost_reg= 0.114521179 cost= 0.114521179\n",
-      "\n",
-      "Test Scores\n",
-      "{'accuracy': 0.9638}\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Test TunableModel Tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "input_dim = 784\n",
     "\n",
