NIH data handler modified, data Handler now works integrates properly with TunableModel

--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NIH DataHandler"
+    "### NIH DataHandler"
    ]
   },
   {
@@ -246,9 +246,11 @@
     "# print(os.listdir(\"../../NIHdata/data\"))\n",
     "\n",
     "data_file = '../../NIHdata/data/Data_Entry_2017.csv'\n",
-    "dHandler_NIH = NIHDataHandler(data_file)\n",
-    "dHandler_NIH.load_data(verbose = 0, cross_validation_ratio = 0.25, normalize = 1)\n",
-    "dHandler_NIH.print_data()"
+    "data_folder = '../../NIHdata/data/'\n",
+    "dHandler_NIH = NIHDataHandler(data_file, data_folder)\n",
+    "dHandler_NIH.load_data(verbose = 0, cross_validation_ratio = 0.20, prune_threshold=1000, number_samples=5000)\n",
+    "# dHandler_NIH.print_data()\n",
+    "dHandler_NIH.show_img()"
    ]
   },
   {
@@ -277,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
