Updating DAMADICS data handler.
The data handler now works for different window sizes. Still need to figure out the best method to generate test and cv data.

--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -11,24 +11,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "import logging\n",
     "import sys\n",
     "import numpy as np\n",
+    "import random\n",
     "\n",
     "sys.path.append('/Users/davidlaredorazo/Documents/University_of_California/Research/Projects')\n",
     "#sys.path.append('/media/controlslab/DATA/Projects')\n",
+    "\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "\n",
     "from ann_framework.data_handlers.data_handler_CMAPSS import CMAPSSDataHandler\n",
     "from ann_framework.data_handlers.data_handler_MNIST import MNISTDataHandler\n",
     "from ann_framework.data_handlers.data_handler_CIFAR10 import CIFAR10DataHandler\n",
     "from ann_framework.data_handlers.data_handler_Grid import GridDataHandler\n",
-    "from ann_framework.data_handlers.data_handler_NIH import NIHDataHandler"
+    "from ann_framework.data_handlers.data_handler_NIH import NIHDataHandler\n",
+    "from ann_framework.data_handlers.data_handler_DAMADICS import DamadicsDataHandler"
    ]
   },
   {
@@ -49,7 +61,7 @@
     "                     'BPR', 'farB', 'htBleed', 'Nf_dmd', 'PCNfR_dmd', 'W31', 'W32']\n",
     "selected_indices = np.array([2, 3, 4, 7, 8, 9, 11, 12, 13, 14, 15, 17, 20, 21])\n",
     "selected_features = list(features[i] for i in selected_indices-1)\n",
-    "data_folder = '../../NASA_RUL_-CMAPS-/CMAPSSData'\n",
+    "data_folder = '../../NASA_RUL_(CMAPS)/CMAPSSData'\n",
     "\n",
     "window_size = 30\n",
     "window_stride = 1\n",
@@ -107,6 +119,104 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DAMADICS DataHandler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to mysql+mysqldb://readOnly:_readOnly2019@169.236.181.40/damadics successfull\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_date = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
+    "date2 = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
+    "time_delta = datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=1, hours=0, weeks=0)\n",
+    "end_time = start_date + 1001*time_delta #get the first 300 instances\n",
+    "\n",
+    "features = ['externalControllerOutput', 'undisturbedMediumFlow', 'pressureValveInlet', \n",
+    "            'pressureValveOutlet', 'mediumTemperature', 'rodDisplacement', 'disturbedMediumFlow', \n",
+    "           'selectedFault', 'faultType', 'faultIntensity']\n",
+    "\n",
+    "selected_indices = np.array([1,2,3,4,5,6])\n",
+    "selected_features = list(features[i] for i in selected_indices-1)\n",
+    "\n",
+    "#Does not work for sequence sizes larger than 1 given the way I'm generating the test data. \n",
+    "#Need to properly define what the test data is going to be like.\n",
+    "window_size = 1\n",
+    "window_stride = 1\n",
+    "\n",
+    "dHandlder_valve = DamadicsDataHandler(selected_features, window_size, window_stride)\n",
+    "dHandlder_valve.connect_to_db('readOnly', '_readOnly2019', '169.236.181.40', 'damadics')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0\n",
+      "Loading data from memory\n",
+      "data splitting: 0:00:00.000023\n",
+      "Printing shapes\n",
+      "\n",
+      "Training data (X, y)\n",
+      "(256, 6)\n",
+      "(256, 1)\n",
+      "Testing data (X, y)\n",
+      "(1, 6)\n",
+      "(1, 1)\n",
+      "Printing first 5 elements\n",
+      "\n",
+      "Training data (X, y)\n",
+      "[[0.5      0.87684  0.650832 0.214553 0.00159  1.      ]\n",
+      " [0.366043 0.850576 0.643717 0.215373 0.369939 1.      ]\n",
+      " [0.732444 0.849537 0.647472 0.214781 0.732446 0.222181]\n",
+      " [0.257854 0.849203 0.648064 0.214384 0.239649 0.99759 ]\n",
+      " [0.659356 0.848475 0.654271 0.214159 0.67503  0.283687]]\n",
+      "[[20.]\n",
+      " [20.]\n",
+      " [20.]\n",
+      " [20.]\n",
+      " [20.]]\n",
+      "Testing data (X, y)\n",
+      "[[0.366043 0.849582 0.65491  0.213536 0.500932 0.682573]]\n",
+      "[[1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dHandlder_valve.load_data(start_date, end_time, unroll=True, verbose=1)\n",
+    "dHandlder_valve.print_data(print_top=True)\n",
+    "\n",
+    "#One hot encoding\n",
+    "#cat = np.arange(1,5)\n",
+    "#encoder = OneHotEncoder(categories=[cat])\n",
+    "#encoder = OneHotEncoder(categories=[np.arange(1,21)])\n",
+    "#output_one_hot_matrix = encoder.fit_transform(self._y.reshape(-1, 1)).toarray()\n",
+    "#print(encoder.categories_)\n",
+    "#print(self._y[:5])\n",
+    "#print(output_one_hot_matrix[:5, :])\n",
+    "#output_one_hot_matrix = self.one_hot_encode(self._df.shape[0])\n",
+    "#output_one_hot_matrix = encoder.fit_transform(self._y.reshape(-1, 1)).toarray()\n",
+    "#self._y = encoder.fit_transform(self._y.reshape(-1, 1)).toarray()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -124,11 +234,7 @@
     "\n",
     "dHandler_grid = GridDataHandler()\n",
     "dHandler_grid.load_data(verbose=1, cross_validation_ratio=0.2, boundaries=[[0,1], [0,1], [0,1]], n=[5, 5, 5])\n",
-    "dHandler_grid.print_data()\n",
-    "\n",
-    "#example = dHandler_cifar10.X_train[0]\n",
-    "#print(example.shape)\n",
-    "#print(example)"
+    "dHandler_grid.print_data()"
    ]
   },
   {
