--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -141,7 +141,7 @@
     "start_date = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
     "date2 = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
     "time_delta = datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=1, hours=0, weeks=0)\n",
-    "end_time = start_date + 1001*time_delta #get the first 300 instances\n",
+    "end_date = start_date + 1001*time_delta #get the first 300 instances\n",
     "\n",
     "features = ['externalControllerOutput', 'undisturbedMediumFlow', 'pressureValveInlet', \n",
     "            'pressureValveOutlet', 'mediumTemperature', 'rodDisplacement', 'disturbedMediumFlow', \n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,37 +169,56 @@
      "output_type": "stream",
      "text": [
       "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0\n",
-      "Loading data from memory\n",
-      "data splitting: 0:00:00.000023\n",
+      "Loading data from database\n",
+      "Extracting data from database runtime: 0:00:00.265040\n",
+      "Retrieved runs\n",
+      "3\n",
+      "[0, 256, 696]\n",
+      "Available runs\n",
+      "2\n",
+      "[(0, 216, 256), (256, 652, 696)]\n",
+      "split ratio 0.100000:\n",
+      "num_sample 2:\n",
+      "num_split_test 1:\n",
+      "num_split_test 1:\n",
+      "data splitting: 0:00:00.000495\n",
       "Printing shapes\n",
       "\n",
       "Training data (X, y)\n",
       "(256, 6)\n",
       "(256, 1)\n",
       "Testing data (X, y)\n",
-      "(1, 6)\n",
-      "(1, 1)\n",
+      "(10, 6)\n",
+      "(10, 1)\n",
       "Printing first 5 elements\n",
       "\n",
       "Training data (X, y)\n",
-      "[[0.5      0.87684  0.650832 0.214553 0.00159  1.      ]\n",
-      " [0.366043 0.850576 0.643717 0.215373 0.369939 1.      ]\n",
-      " [0.732444 0.849537 0.647472 0.214781 0.732446 0.222181]\n",
-      " [0.257854 0.849203 0.648064 0.214384 0.239649 0.99759 ]\n",
-      " [0.659356 0.848475 0.654271 0.214159 0.67503  0.283687]]\n",
-      "[[20.]\n",
+      "[[0.366043 0.851547 0.649668 0.215567 0.383757 1.      ]\n",
+      " [0.659356 0.848289 0.646597 0.215185 0.677321 0.290582]\n",
+      " [0.366043 0.849878 0.643544 0.213564 0.374558 1.      ]\n",
+      " [0.484302 0.849316 0.647047 0.216367 0.46532  0.828368]\n",
+      " [0.659356 0.848122 0.6398   0.215419 0.679053 0.288377]]\n",
+      "[[ 8.]\n",
       " [20.]\n",
       " [20.]\n",
       " [20.]\n",
-      " [20.]]\n",
+      " [ 8.]]\n",
       "Testing data (X, y)\n",
-      "[[0.366043 0.849582 0.65491  0.213536 0.500932 0.682573]]\n",
-      "[[1.]]\n"
+      "[[0.484302 0.847412 0.646711 0.214055 0.465985 0.830088]\n",
+      " [0.484302 0.846766 0.643403 0.213364 0.499448 0.704205]\n",
+      " [0.484302 0.849943 0.652389 0.215808 0.467047 0.816181]\n",
+      " [0.366043 0.849611 0.654383 0.215053 0.414999 0.998517]\n",
+      " [0.659356 0.849639 0.644843 0.21505  0.685794 0.280388]]\n",
+      "[[20.]\n",
+      " [ 1.]\n",
+      " [20.]\n",
+      " [20.]\n",
+      " [20.]]\n"
      ]
     }
    ],
    "source": [
-    "dHandlder_valve.load_data(start_date, end_time, unroll=True, verbose=1)\n",
+    "dHandlder_valve.load_data(unroll=True, verbose=1, start_date=start_date, end_date=end_date)\n",
     "dHandlder_valve.print_data(print_top=True)\n",
     "\n",
     "#One hot encoding\n",
@@ -260,38 +279,6 @@
     "# dHandler_NIH.print_data()\n",
     "#dHandler_NIH.show_img()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.random.random([10, ])\n",
-    "b = np.random.random([10, ])\n",
-    "\n",
-    "np.sum(a-b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.random.random([10, ])\n",
-    "print(a)\n",
-    "a[[1,4,5,6]]\n",
-    "a[[]] = 0\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
